@@ -1,3 +1,6 @@
+* Fixed issue where operation following an index filter operation did not
+  get executed.
+
 1.9 2019-10-21
 ~~~~~~~~~~~~~~
 
